--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
 </body>
 <script src="Array-1.js"></script>
 <script src="Array-2.js"></script>
+<script src="arrray-advencad.js"></script>
 </html>
